# HW3-Clustering

./: main.py  pyproject.toml
.github/workflows/: test.yml
cluster/: kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
